# openclaw-lite

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
openclaw_lite/: __init__.py  agent.py  deck.py  main.py  registry.py  skills.py  subagent.py
openclaw_lite/tools/: __init__.py  file.py  terminal.py  web.py
tests/: conftest.py  test_agent.py  test_deck.py  test_registry.py  test_skills.py  test_subagent.py  test_tools.py
