[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-lite"
version = "0.1.0"
description = "Minimal agent framework with OpenClaw-style subagent orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.34",
    "openai>=1.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.scripts]
openclaw-lite = "openclaw_lite.main:main"

[tool.setuptools.packages.find]
include = ["openclaw_lite*"]
